fix entry box going behind other elements

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -35,6 +35,10 @@ body {
   width: 100vw;
 }
 
+.react-reveal {
+  animation-fill-mode: unset !important;
+}
+
 ul {
   display: flex;
   padding: 0px;
